objects/DemoObject__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfilePermissionCheckV2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProfilePermissionCheckV2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfilePermissionCheckV3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProfilePermissionCheckV3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfilePermissionCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProfilePermissionCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DemoObject</label>
    <nameField>
        <label>DemoObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>